--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@vitejs/plugin-legacy": "^1.6.3",
     "@vue/runtime-dom": "^3.2.22",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.4.1",
     "unplugin-vue2-script-setup": "^0.7.1",
     "vite": "^2.6.14",
     "vite-plugin-vue2": "^1.9.0",
